# kursach

cursach/: CMakeLists.txt  Code.cpp  Code.h  Data.cpp  Data.h  Date.cpp  Date.h  Fio.cpp  Fio.h  HashTable.cpp  HashTable.h  LinkedList.h  input.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt
